# barracks-scanner

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1710716866879-75055b6798e1a.mjs
barracks-scanner/: .gitignore  package-lock.json  package.json  vite.renderer.config.ts  webpack.main.config.js  webpack.rules.js
barracks-scanner/src/: app.jsx  app.scss  app.tsx  index.css  main.js  main.ts  renderer.js  renderer.ts  tamagui.config.ts
barracks-scanner/src/components/: nav-bar.jsx  page-content.jsx
barracks-scanner/src/pages/: id-scanner.jsx  personnel.jsx  root.jsx  scan-history.jsx
src/: App.scss  App.tsx  main.tsx  purger.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  input.rs  log.rs  main.rs  person.rs
src/@types/lucide-react/: index.d.ts
src/classes/: date.ts  person.ts
src/components/: nav-bar.tsx  page-content.tsx  person-details.tsx  purger.tsx  title.tsx
src/components/pages/: id-scanner.tsx  personnel.tsx  scan-history.tsx
