[package]
name = "barracks-scanner"
version = "0.0.0"
description = "Barracks Personnel Identifier"
authors = ["sereno"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-start-dragging", "window-hide", "window-minimize", "window-unminimize", "window-show", "window-close", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { version = "0.5.3" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
